--- a/.env
+++ b/.env
@@ -24,5 +24,5 @@ APP_SECRET=f8bcbb6b097b738bd7adfc11aa3d150d
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://sistemas:Sistemasdspd2019@31.220.55.117:3306/sicasep
+DATABASE_URL=mysql://usuario:password@localhost:3306/db
 ###< doctrine/doctrine-bundle ###
